# paper-fetcher

./: .gitignore  README.md  README.zh.md  SKILL.md  config.example.yaml  pyproject.toml  skill.py
cli/: download.py  list.py  main.py  search.py
core/: __init__.py  config.py  downloader.py  merger.py  models.py  proxy.py  searcher.py  storage.py  utils.py
core/sources/: arxiv.py  base.py  scholar.py  semantic.py
docs/superpowers/plans/: 2026-04-29-remove-scholar-sdk-semantic.md
docs/superpowers/specs/: 2026-04-27-fix-bootstrap-reinstall-design.md  2026-04-29-refactor-remove-scholar-sdk-semantic-design.md
tests/: test_config.py  test_downloader.py  test_integration.py  test_proxy.py  test_searcher.py  test_skill.py  test_sources.py
